--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -62,7 +62,7 @@
             <input type="checkbox" id="subscribe" name="subscribe" value="yes">
             <label for="subscribe">Please subscribe me to the monthly newsletter</label>
         
-            <button type="button">Submit</button>
+            <button type="submit">Submit</button>
         </form>
         
         </main>
