--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -53,10 +53,10 @@
                 <input type="radio" id="general" name="purpose" value="General Inquiry" required> General Inquiry
             </label>
             <label for="suggestion">
-                <input type="radio" id="reservation" name="purpose" value="Reservation Question"> Website Suggestion
+                <input type="radio" id="suggestion" name="purpose" value="Reservation Question"> Website Suggestion
             </label>
             <label for="reservation">
-                <input type="radio" id="suggestion" name="purpose" value="Website Suggestion"> Reservation Question
+                <input type="radio" id="reservation" name="purpose" value="Website Suggestion"> Reservation Question
             </label>
         
             <label for="message"><strong>Message:</strong></label>
