--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -54,11 +54,11 @@
             </div>
             <section class="tripi">
                 <h2>More Rafting Adventures</h2>
-                    <img src="images/brotas.png">
-                    <img src="images/socorro.jpg">
-                    <img src="images/juquitiba.jpg">
-                    <img src="images/itacare.jpg">
-                    <img src="images/extrema.jpg">   
+                    <img src="images/brotas.png" alt="brotas">
+                    <img src="images/socorro.jpg" alt="socorro">
+                    <img src="images/juquitiba.jpg" alt="juquitiba">
+                    <img src="images/itacare.jpg" alt="itacare">
+                    <img src="images/extrema.jpg" alt="extrema">   
                     <h3>Brotas-MG</h3>
                     <h3>Socorro-SP</h3>
                     <h3>Juquitiba-SP</h3>
@@ -66,6 +66,7 @@
                     <h3>Extrema-SP</h3>
                             <!-- Add more trip options as needed -->
             </section>
+        </main>
             
         <footer>
             <p>&copy;2023 🚣‍♂️ Rafting Team 🚣‍♂️ Allan Matos </p>
