--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,9 +4,9 @@
         <link href="styles/rafting.css" rel="stylesheet" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
-        <meta name="description" content="This is the about us page, here you will find more recourses about our companny!">
+        <meta name="description" content="This is the Home Page Company. Here you will discover our Rafting Company!">
         <meta name="author" content="Allan Matos Gomes de Sousa">
-        <title> About Us</title>
+        <title>Home Team Rafting Company</title>
     </head>
     <body class="full">
         <!-- OK-->
@@ -40,17 +40,22 @@
                     </label>
                     <button type="submit"><strong>Submit</strong></button>
                 </form>
-                <a href="trips.html">
+                <div>
                     <img src="images/foziguaçu.png" alt="trip-page-invite">
-                    <h1>CHECK OUR TRIPS!</h1>
-                </a>
+                    <a href="trips.html" target="trip">
+                        <p><strong>CHECK OUR TRIPS!</strong></p>
+                    </a>
+                </div>
             </section>
-            <section class="include">
-                <img src="images/img4.png" alt="pourpose-img">
-                <p>At Team Rafting, our purpose is to inspire adventure and create memories that last a lifetime. We are passionate about delivering safe and thrilling white-water rafting experiences in some of the most beautiful locations. Our dedicated team of professional guides and staff are committed to providing you with the best possible adventure, ensuring your safety and enjoyment every step of the way. Whether you're seeking an adrenaline rush, a serene river float, or a family-friendly outing, our wide range of trip offerings caters to all ages and skill levels. Our mission is to share the natural wonders and excitement of white-water rafting, creating an environment where every participant feels the rush of the river and the joy of camaraderie. Join us for an unforgettable journey into the heart of nature and adventure.</p>
-                <img src="images/img3.png" alt="offers-img">
-                <p>"Discover the thrill of white-water rafting with our exciting trip offerings! Dive into the heart-pounding adventure as you conquer Class III and IV rapids, surrounded by the breathtaking natural beauty of our handpicked locations. Our packages are tailored to provide you with an unforgettable experience, including comfortable accommodations in picturesque lodges, starting at just $150 per person. With accessible airports, expert guides, and riverside barbecues, your journey with us promises excitement, relaxation, and the chance to create lasting memories. Whether you're a seasoned rafter or a first-timer, our diverse trips cater to all levels of experience. Get ready to embark on an unforgettable rafting expedition that will leave you craving more!"</p>
-            </section>
+            <table class="include">
+                <tr>
+                    <td><img src="images/img4.png" alt="pourpose-img"></td>
+                    <td><p>At Team Rafting, our purpose is to inspire adventure and create memories that last a lifetime. We are passionate about delivering safe and thrilling white-water rafting experiences in some of the most beautiful locations. Our dedicated team of professional guides and staff are committed to providing you with the best possible adventure, ensuring your safety and enjoyment every step of the way. Whether you're seeking an adrenaline rush, a serene river float, or a family-friendly outing, our wide range of trip offerings caters to all ages and skill levels. Our mission is to share the natural wonders and excitement of white-water rafting, creating an environment where every participant feels the rush of the river and the joy of camaraderie. Join us for an unforgettable journey into the heart of nature and adventure.</p></td>
+                    <td><img src="images/img3.png" alt="offers-img"></td>
+                    <td><p>"Discover the thrill of white-water rafting with our exciting trip offerings! Dive into the heart-pounding adventure as you conquer Class III and IV rapids, surrounded by the breathtaking natural beauty of our handpicked locations. Our packages are tailored to provide you with an unforgettable experience, including comfortable accommodations in picturesque lodges, starting at just $150 per person. With accessible airports, expert guides, and riverside barbecues, your journey with us promises excitement, relaxation, and the chance to create lasting memories. Whether you're a seasoned rafter or a first-timer, our diverse trips cater to all levels of experience. Get ready to embark on an unforgettable rafting expedition that will leave you craving more!"</p></td>
+                </tr>
+            </table>
+            
         </main>
         <footer>
             <p>&copy;2023 🚣‍♂️ Rafting Team 🚣‍♂️ Allan Matos </p>
